fixed <script> tag

--- a/e-artexte-1.html
+++ b/e-artexte-1.html
@@ -15,7 +15,7 @@
    
 
 <!-- Load the Timeline library after reseting the fonts, etc -->
-	<script>
+	<script type="text/javascript">
      var Timeline_ajax_url="timeline_2.3.1/simile-ajax-api.js?bundle=false";
      var Timeline_urlPrefix='timeline_2.3.1/';       
     </script>
