Added YUI Library CSS files

--- a/e-artexte-1.html
+++ b/e-artexte-1.html
@@ -8,9 +8,9 @@
    
 
    <!-- See http://developer.yahoo.com/yui/ for info on the reset, font and base css -->
-   <link rel="stylesheet" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" type="text/css">
+   <link rel="stylesheet" href="yui/reset-fonts-grids.css" type="text/css">
    
-   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/base/base-min.css"> 
+   <link rel="stylesheet" type="text/css" href="yui/base-min.css"> 
 
    
 
