--- a/e-artexte-1.html
+++ b/e-artexte-1.html
@@ -8,9 +8,10 @@
    
 
    <!-- See http://developer.yahoo.com/yui/ for info on the reset, font and base css -->
-   <link rel="stylesheet" href="yui/reset-fonts-grids.css" type="text/css">
+   <link rel="stylesheet" href="yui3.9.1/cssreset-min.css" type="text/css">
    
-   <link rel="stylesheet" type="text/css" href="yui/base-min.css"> 
+   <link rel="stylesheet" href="yui3.9.1/cssbase-min.css" type="text/css"> 
+   <link rel="stylesheet" href="yui3.9.1/cssfonts-min.css" type="text/css">
 
    
 
