onload() and resize() is now added dynamically in <head>

--- a/e-artexte-1.html
+++ b/e-artexte-1.html
@@ -118,7 +118,7 @@
         });
     </script>
 </head>
-<body onload="onLoad();" onresize="onResize();">
+<body>
 <div style="margin-bottom:5px;background-color:#ffffff;text-align:left;">
 <a href="http://www.photographymedia.com/">
 <img 
