set correct content-type to JavaScript in the response in EPrintsData.php file
- also increased the timout, since there could be a lot of data here
that takes longer than 30 seconds to load.

--- a/e-artexte-1.html
+++ b/e-artexte-1.html
@@ -37,6 +37,9 @@
   				url: 'EPrintsData.php', 
   				dataType: 'script', 
   				cache: 'true',
+  				error: function(data){
+  					$('#loading').html('Failed to load data for some reason.  Please try again by clicking reload on your browser. ');
+  				},
  				success: function(data) { 
    							 onLoad();
    							 $('#loading').html('');
